              + lmap/conj
              + lmap/is_ket
              + lmap/is_concatenable
              + state/subsystems
              + utils/comm
              + utils/acomm
              + utils/unravel_index
              + invariant/LU
              + examples/bernstein_vazirani
              b utils/plot_adiabatic_evolution: eigs call now works for non-real matrices as well
              b state/negativity: extra sqrt removed
              b examples/qft_circuit: now nonpalindromic dimension vectors work too
              * state/entropy also gives Rényi entropies.
              * utils/lrmul simplified
              * hamiltonian/heisenberg takes now a connection graph as input
              * renames:
                 state/seq_propagate    =>   seq/propagate
                 utils/liouvillian_fp   =>   utils/superop_fp
                 utils/plot_2q_corr     =>   utils/plot_correlation_simplex

0.11.0  in progress
              + lmap/tensorpow
              + gate/werner
              + gate/isotropic
              + gate/copydot
              + examples/werner_states
              + examples/magic_state_distillation
              + examples/dynamical_decoupling
              * examples/nmr_sequences now also does pulse strength errors
              + utils/superop_to_choi
              - utils/nullspace_hermitian
              b utils/superop_fp: hermitian matrices are a real subspace, orthogonalization must respect this
              * utils/unravel_index works on vectors of indices
              * utils/tensorbasis returns the integer locality of each element
              * utils/tensorsum can now handle matrices and any number of inputs
              * seq: sign convention changed
              - seq/cpmg
              + seq/knill
              + seq/dd
              * markov/bath class rewritten, now supports fermionic baths as well
              b markov/ops: warns of possible RWA violations
              + more test scripts